2013-10-07  Per Bothner  <per@bothner.com>

	* QuoteExp.java (compilation):  Optimization for primitive value,
	if the target is objectType.

2013-09-22  Per Bothner  <per@bothner.com>

	* ApplicationMainSupport.java (commandName): New field.
	(setArgs): Set commandName if unset and the
	kawa.command.name property is set.

2013-09-18  Per Bothner  <per@bothner.com>

	* ApplicationMainSupport.java (setArgs): Don't set
	command-line-arguments in environment - use normal Scheme.initScheme
	mechanism.  This makes variable available at compile-time,
	avoiding warnings.

2013-09-16  Per Bothner  <per@bothner.com>

	* Compilation.java (defaultClassFileVersion): Add JAVA8 support.

2013-09-07  Per Bothner  <per@bothner.com>

	* PrimProcedure.java (mostSpecific): Moved from MethodProc.
	Limited arguments to PrimProcedure, so we can implement
	the cjeck-for-abstract-methods part of the JLS specification.
	(isAbstract): New method.

	* Language.java (getTypeor): Don't treat ObjectExp as
	a type specifier.  This fixes  Savannah bug #39945: "Too few
	arguments" warning when declaring an anonymous class in a let block"

2013-09-05  Per Bothner  <per@bothner.com>

	* PrimProcedure.java (compileArgs): Better handling of varargs.

2013-09-04  Per Bothner  <per@bothner.com>

	* Compilation.java (warnVoidUsed): New option.
	(warnVoidUsed): New method.
	* InlineCalls.java (visit, visitIfExp): Use warnVoidUsed.

2013-07-26  Per Bothner  <per@bothner.com>

	* ApplyExp.java (compile): Fix 2013-07-11 tail-call change
	to use regular Label#define, rather than CodeAttr#getLabel.
	The latter doesn't set types correctly.

	* Compilation.java (compileConstant): Inline
	compileConstantToField here.  No need to wire in implementation
	strategy of using static fields.
	(compileConstantToField): Remove.

2013-07-18  Per Bothner  <per@bothner.com>

	* Declaration.java (load): When invoking a getter method,
	use loadOwningObject instead of just calling loadHeapFrame.